Grammar and figure adjustments.

--- a/Lab6_9073072564_200427.tex
+++ b/Lab6_9073072564_200427.tex
@@ -6,6 +6,7 @@
 
 \title{Quantifying the Stopping Range of $\alpha$ particles from ${}^{241}$Am and ${}^{198}$Au Radiation Deposition in Pb and Al Shielding Materials}
 \date{\today}
+\author{NE 408}
 
 \begin{document}
 
@@ -24,5 +25,8 @@
 \pagebreak
 \bibliographystyle{unsrt}
 \bibliography{references}
+
+\pagebreak
+Author: Jordan Stomps
 
 \end{document}
