--- a/references.bib
+++ b/references.bib
@@ -65,3 +65,9 @@ month = {12},
 pages = {},
 title = {InTech-Undesirable radioisotopes induced by therapeutic beams from medical linear accelerators}
 }
+
+@misc{excel,
+  title= {{MS Excel LINEST Function Description}},
+  howpublished = {\url{https://bit.ly/35aMzEM}},
+  note = {Accessed: 2020-04-24}
+}
